# Babys-First-Rust-Project

./: Cargo.toml  README.md  monitor.json
src/: cli.rs  configuration.rs  daemon.rs  is_up.rs  main.rs  notifications.rs
src/commands/: daemon.rs  generate_completions.rs  list.rs  mod.rs  mutators.rs  once.rs  report.rs  run.rs
