[package]
name = "rust-hello-world"
version = "0.1.0"
authors = ["Giuseppe Burtini <giuseppe@burtini.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9.20"
libnotify = "^1.0.3"

[[bin]]
name = "rust-hello-world"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
