[package]
name = "is_up"
version = "0.1.0"
authors = ["Giuseppe Burtini <giuseppe@burtini.ca>"]
edition = "2018"
description = "Monitors server uptime."
default-run = "is-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9.20"
libnotify = "^1.0.3"
url = "^2.1.0"
serde_json = "^1.0.40"
serde = "^1.0.101"
clap = "^2.33.0"
prettytable-rs = "^0.8.0"
csv = "^1.1.1"
daemonize = "^0.4.1"
rayon = "^1.2.0"

[dev-dependencies]
mocktopus = "^0.7.3"

[[bin]]
name = "is-up"
path = "src/main.rs"

[[bin]]
name = "is-up-daemon"
path = "src/daemon.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
